use font awesome icons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <!-- PAGE INFO -->
     <meta charset="UTF-8" />
     <meta content="text/html" http-equiv="Content-Type" />
-    <link rel="shortcut icon" href="https://img.icons8.com/fluency/50/000000/autograph.png" type="image/x-icon" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
     <title>Email Signature</title>
   </head>
 
@@ -84,10 +85,7 @@
                        href="https://github.com/iamtalhaasghar" 
                        target="_blank"
                     >
-                      <img alt="github" 
-                           style="width: 18px; height: 18px;" 
-                           src="https://image.ibb.co/eYfrgy/font_awesome_4_7_0_github_50_0_666666_none.png"
-                      >
+                    <i class="fab fa-github" style="font-size: 22px; color: #5D6D7E;"></i>                      
                     </a>
                   </span>
                   
@@ -110,10 +108,7 @@
                        href="https://www.linkedin.com/in/iamtalhaasghar/" 
                        target="_blank"
                     >
-                      <img alt="linkedin" 
-                           style="width: 18px; height: 18px;" 
-                           src="https://image.ibb.co/jQ68Td/font_awesome_4_7_0_linkedin_50_0_666666_none.png"
-                      >
+                    <i class="fab fa-linkedin" style="font-size: 22px; color: #5D6D7E;"></i>                      
                     </a>
                   </span>
 
