--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
       <tbody>
         <tr>
           <!-- ==================== SECTION #1 ==================== -->
-          <td style="width: 150px; padding: 0; font-family: Verdana; text-align: center; margin: auto;">
-            <!-- Photo -->
+          <!-- <td style="width: 150px; padding: 0; font-family: Verdana; text-align: center; margin: auto;">
             <a href="http://talhaasghar.dev/" target="_blank">
               <img alt="Photograph" 
                    style="width: 120px; height: 120px; border-radius: 60px; border: 0;" 
                    src="https://talhaasghar.dev/assets/img/prof_pic-480.webp"
               >
             </a>
-          </td>
+          </td> -->
 
           <!-- ==================== DIVIDER ==================== -->
-          <td style="height: 140px; border-left: thin solid #BDC3C7; padding-right: 15px;"></td>
-          <td style="font-family: inherit; padding: 0; margin: auto; width:80%;">
+          <td style="height: 140px; border-left: thin transparent #BDC3C7; padding-right: 15px;"></td>
+          <td style="font-family: inherit; padding: 0; margin: auto; width:100%;">
 
           <!-- ==================== SECTION #2 ==================== -->
           <table style="font-family: inherit; width:100%;" cellpadding="0" cellspacing="0">
@@ -36,7 +35,7 @@
               <tr>
                 <td style="font-family: inherit; padding: 0; vertical-align: top;" valign="top">
                   <strong>
-                    <a style="font-family: inherit; color: #2C3E50; font-size: 14pt; text-decoration: none;" 
+                    <a style="font-family: inherit; color: #2C3E50; font-size: 12pt; text-decoration: none;" 
                        href="https://talhaasghar.dev/" 
                        target="_blank"
                     >
@@ -45,7 +44,7 @@
                     </br>
                   </strong>
 
-                  <a style="font-family: inherit; color:#7F8C8D; font-size: 10pt; text-decoration: none;" 
+                  <a style="font-family: inherit; color:#7F8C8D; font-size: 8pt; text-decoration: none;" 
                      href="https://talhaasghar.dev/" 
                      target="_blank"
                   >
@@ -59,7 +58,7 @@
               <!-- II. Company -->
               <tr>
                 <td style="font-family: inherit; padding-bottom: 6px; vertical-align: top;" valign="top">                  
-                    <a style="font-family: inherit; color:#6C7A89; font-size: 10pt; text-decoration: none;" 
+                    <a style="font-family: inherit; color:#6C7A89; font-size: 8pt; text-decoration: none;" 
                        href="https://convergence.pk/" 
                        target="_blank"
                     >
